[package]
name = "conveyor"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
futures-preview = {version = "0.3.0-alpha.17", features = ["compat"]}
crossbeam = "^0.7"
futures_old = { package = "futures", version = "^0.1" }

[features]
default = []
producer = []
work = []
